- Renames function expression to anonymise them.  - Adds support for Or and Not operators.  - Adds support for ne, gt, gte, lt and lte functions.